# pihole-switch

./: .gitignore  Cargo.toml  README.md  build.rs
resources/: resources.rc
src/: linux.rs  main.rs  pi_calls.rs  piapi_handler.rs  tray_functions.rs  tray_handler.rs  windows.rs
