[package]
name = "pihole-switch"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
open = "5.3.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.39"
image = "0.24"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18"}
gtk-sys = { version = "0.18" }
tray-item = { version = "0.10.0", features = ["ksni"] }

[target.'cfg(target_os = "windows")'.dependencies]
tray-item = "0.10.0"

[build-dependencies]
embed-resource = "2.5"